--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -24,11 +24,11 @@ jobs:
         with:
           context: ./frontend
           push: true
-          tags: r0tbart/todo-frontend:latest
+          tags: christechstarter/todo-frontend:latest
 
       - name: Build and Push Backend Image
         uses: docker/build-push-action@v5
         with:
           context: ./backend
           push: true
-          tags: r0tbart/todo-backend:latest
+          tags: christechstarter/todo-backend:latest
