--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -8,27 +8,42 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    env:
+      IMAGE_NAME_BACKEND: todo-backend
+      IMAGE_NAME_FRONTEND: todo-frontend
 
     steps:
-      - name: Checkout Repository
+      - name: Checkout code
         uses: actions/checkout@v3
 
+      # 🔑 Docker Hub Login
       - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+        run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
-      - name: Build and Push Frontend Image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./frontend
-          push: true
-          tags: christechstarter/todo-frontend:latest
+      # 🔑 GHCR Login
+      - name: Log in to GitHub Container Registry
+        run: echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u "${{ secrets.GHCR_USERNAME }}" --password-stdin
 
-      - name: Build and Push Backend Image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./backend
-          push: true
-          tags: christechstarter/todo-backend:latest
+      # 🧱 Build Backend
+      - name: Build backend image
+        run: |
+          docker build -t christechstarter/${{ env.IMAGE_NAME_BACKEND }}:latest ./backend
+          docker build -t ghcr.io/${{ secrets.GHCR_USERNAME }}/${{ env.IMAGE_NAME_BACKEND }}:latest ./backend
+
+      # 🧱 Build Frontend
+      - name: Build frontend image
+        run: |
+          docker build -t christechstarter/${{ env.IMAGE_NAME_FRONTEND }}:latest ./frontend
+          docker build -t ghcr.io/${{ secrets.GHCR_USERNAME }}/${{ env.IMAGE_NAME_FRONTEND }}:latest ./frontend
+
+      # 🚀 Push Backend Images
+      - name: Push backend to Docker Hub and GHCR
+        run: |
+          docker push christechstarter/${{ env.IMAGE_NAME_BACKEND }}:latest
+          docker push ghcr.io/${{ secrets.GHCR_USERNAME }}/${{ env.IMAGE_NAME_BACKEND }}:latest
+
+      # 🚀 Push Frontend Images
+      - name: Push frontend to Docker Hub and GHCR
+        run: |
+          docker push christechstarter/${{ env.IMAGE_NAME_FRONTEND }}:latest
+          docker push ghcr.io/${{ secrets.GHCR_USERNAME }}/${{ env.IMAGE_NAME_FRONTEND }}:latest
