--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -12,19 +12,21 @@ jobs:
     env:
       IMAGE_NAME_BACKEND: todo-backend
       IMAGE_NAME_FRONTEND: todo-frontend
+      DOCKERHUB_NAMESPACE: christechstarter
+      GHCR_NAMESPACE: ghcr.io/r0tbart  # <-- kleingeschrieben!
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      # 🔑 Docker Hub Login via Action
+      # 🔐 Login bei Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # 🔑 GHCR Login via Action
+      # 🔐 Login bei GHCR
       - name: Log in to GitHub Container Registry (GHCR)
         uses: docker/login-action@v2
         with:
@@ -32,25 +34,25 @@ jobs:
           username: ${{ secrets.GHCR_USERNAME }}
           password: ${{ secrets.GHCR_TOKEN }}
 
-      # 🔨 Build Docker images
-      - name: Build backend & frontend
+      # 🛠️ Build & Tag Images
+      - name: Build and tag Docker images
         run: |
-          # Backend
-          docker build -t christechstarter/${{ env.IMAGE_NAME_BACKEND }}:latest ./backend
-          docker tag christechstarter/${{ env.IMAGE_NAME_BACKEND }}:latest ghcr.io/${{ secrets.GHCR_USERNAME }}/${{ env.IMAGE_NAME_BACKEND }}:latest
-          
-          # Frontend
-          docker build -t christechstarter/${{ env.IMAGE_NAME_FRONTEND }}:latest ./frontend
-          docker tag christechstarter/${{ env.IMAGE_NAME_FRONTEND }}:latest ghcr.io/${{ secrets.GHCR_USERNAME }}/${{ env.IMAGE_NAME_FRONTEND }}:latest
+          # Backend build
+          docker build -t $DOCKERHUB_NAMESPACE/$IMAGE_NAME_BACKEND:latest ./backend
+          docker tag $DOCKERHUB_NAMESPACE/$IMAGE_NAME_BACKEND:latest $GHCR_NAMESPACE/$IMAGE_NAME_BACKEND:latest
 
-      # 🚀 Push to Docker Hub
-      - name: Push to Docker Hub
-        run: |
-          docker push christechstarter/${{ env.IMAGE_NAME_BACKEND }}:latest
-          docker push christechstarter/${{ env.IMAGE_NAME_FRONTEND }}:latest
+          # Frontend build
+          docker build -t $DOCKERHUB_NAMESPACE/$IMAGE_NAME_FRONTEND:latest ./frontend
+          docker tag $DOCKERHUB_NAMESPACE/$IMAGE_NAME_FRONTEND:latest $GHCR_NAMESPACE/$IMAGE_NAME_FRONTEND:latest
 
-      # 🚀 Push to GHCR
-      - name: Push to GitHub Container Registry (GHCR)
+      # 🚀 Push zu Docker Hub
+      - name: Push Docker Hub images
         run: |
-          docker push ghcr.io/${{ secrets.GHCR_USERNAME }}/${{ env.IMAGE_NAME_BACKEND }}:latest
-          docker push ghcr.io/${{ secrets.GHCR_USERNAME }}/${{ env.IMAGE_NAME_FRONTEND }}:latest
+          docker push $DOCKERHUB_NAMESPACE/$IMAGE_NAME_BACKEND:latest
+          docker push $DOCKERHUB_NAMESPACE/$IMAGE_NAME_FRONTEND:latest
+
+      # 🚀 Push zu GHCR
+      - name: Push GHCR images
+        run: |
+          docker push $GHCR_NAMESPACE/$IMAGE_NAME_BACKEND:latest
+          docker push $GHCR_NAMESPACE/$IMAGE_NAME_FRONTEND:latest
